--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,55 +1,59 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Tag and publish a release
-
-on:
-  push:
-    tags:
-      - 'v*.*.*'
-
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v2
-    - name: Set release version Name
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set release version Name
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Set up JDK 17.0
+    - continue-on-error: true
+      name: Set up JDK 17.0
       uses: actions/setup-java@v1
       with:
         java-version: 17.0
-    - name: Grant execute permission for gradlew
+    - continue-on-error: true
+      name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
+    - continue-on-error: true
+      name: Build with Gradle
       run: ./gradlew build
-    - name: Rename build assets
-      run: mv ./build/distributions/ltr-*.zip ./ltr-plugin-${{ env.RELEASE_VERSION }}.zip
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
+    - continue-on-error: true
+      name: Rename build assets
+      run: mv ./build/distributions/ltr-*.zip ./ltr-plugin-${{ env.RELEASE_VERSION
+        }}.zip
+    - continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      id: create_release
+      name: Create Release
+      uses: actions/create-release@v1
       with:
-        tag_name: ${{ env.RELEASE_VERSION }}
-        release_name: Release ${{ env.RELEASE_VERSION }}
         draft: false
         prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
+        release_name: Release ${{ env.RELEASE_VERSION }}
+        tag_name: ${{ env.RELEASE_VERSION }}
+    - continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      id: upload-release-asset
+      name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}         
-        asset_path: ./ltr-plugin-${{ env.RELEASE_VERSION }}.zip
-        asset_name: ltr-plugin-${{ env.RELEASE_VERSION }}.zip
         asset_content_type: application/zip
-    - name: Publish to Maven Central
+        asset_name: ltr-plugin-${{ env.RELEASE_VERSION }}.zip
+        asset_path: ./ltr-plugin-${{ env.RELEASE_VERSION }}.zip
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+    - continue-on-error: true
       env:
-        SONATYPE_REPO_URL: ${{ secrets.SONATYPE_REPO_URL }}
-        SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
-        SONATYPE_PASS: ${{ secrets.SONATYPE_PASS }}
         GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
         GPG_SIGNING_PASS: ${{ secrets.GPG_SIGNING_PASS }}
+        SONATYPE_PASS: ${{ secrets.SONATYPE_PASS }}
+        SONATYPE_REPO_URL: ${{ secrets.SONATYPE_REPO_URL }}
+        SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
+      name: Publish to Maven Central
       run: ./gradlew publish
+name: Tag and publish a release
+on:
+  repository_dispatch:
+    types: trigger-ga___release.yml
