--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,21 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Run CI tests with Gradle
-
-on:
-  push:
-    branches: [ master, main ]
-  pull_request:
-    branches: [ master, main ]
-
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 17.0
+    - continue-on-error: true
+      uses: actions/checkout@v2
+    - continue-on-error: true
+      name: Set up JDK 17.0
       uses: actions/setup-java@v1
       with:
         java-version: 17.0
-    - name: Grant execute permission for gradlew
+    - continue-on-error: true
+      name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
+    - continue-on-error: true
+      name: Build with Gradle
       run: ./gradlew clean check
+name: Run CI tests with Gradle
+on:
+  repository_dispatch:
+    types: trigger-ga___test.yml
